Improve DL project 4

--- a/deep_learning/4. Curl reps counter.ipynb
+++ b/deep_learning/4. Curl reps counter.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,20 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load libraries\n",
+    "from abc import ABC, abstractmethod\n",
     "import cv2\n",
     "import mediapipe as mp\n",
     "import numpy as np\n",
-    "import contextlib"
+    "import contextlib\n",
+    "from typing import List, Tuple, Union, Optional"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,22 +95,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create curl counter class\n",
-    "class CurlCounter():\n",
-    "    def __init__(self, min_angle=30, max_angle=160, resting_angle=180):\n",
-    "        self.min_angle = min_angle\n",
-    "        self.max_angle = max_angle\n",
-    "        self.resting_angle = resting_angle\n",
-    "        self.current_angle = resting_angle\n",
+    "# Create a Counter base class\n",
+    "class Counter(ABC):\n",
+    "    \"\"\"\n",
+    "    A base class for Counter objects.\n",
+    "\n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    counter : int\n",
+    "        The current count.\n",
+    "    state : str\n",
+    "        The current state of the counter.\n",
+    "    landmarks : list\n",
+    "        The landmarks of the body.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, state = None) -> None:\n",
     "        self.counter = 0\n",
-    "        self.state = \"down\"\n",
+    "        self.state = state\n",
     "        self.landmarks = None\n",
     "\n",
-    "    def calculate_angle_3p(self, a, b, c):\n",
+    "    @abstractmethod\n",
+    "    def make_calculations(self):\n",
+    "        \"\"\"\n",
+    "        Takes care of the calculations needed to count.\n",
+    "        \"\"\"\n",
+    "        ...\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def count(self):\n",
+    "        \"\"\"\n",
+    "        Takes care of counting logic like incrementing, decrementing, and resetting the counter.\n",
+    "        \"\"\"\n",
+    "        ...\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def run(self, landmarks):\n",
+    "        \"\"\"\n",
+    "        Takes care of running the counter logic.\n",
+    "        \"\"\"\n",
+    "        ...\n",
+    "\n",
+    "    def increment(self):\n",
+    "        self.counter += 1\n",
+    "\n",
+    "    def decrement(self):\n",
+    "        self.counter -= 1\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.counter = 0\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return str(f\"Counter: {str(self.counter)} State: {str(self.state)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create counters utils class\n",
+    "class CounterUtils:\n",
+    "    \"\"\"\n",
+    "    Class with utility functions for counting reps and sets in a workout.\n",
+    "    \"\"\"\n",
+    "    @staticmethod\n",
+    "    def calculate_angle_3p(a: Tuple[float, float], b: Tuple[float, float], c: Tuple[float, float]) -> int:\n",
+    "        \"\"\"\n",
+    "        Calculates the angle between three given points.\n",
+    "\n",
+    "        Args:\n",
+    "            a (Tuple[float, float]): First point\n",
+    "            b (Tuple[float, float]): Second point\n",
+    "            c (Tuple[float, float]): Third point\n",
+    "\n",
+    "        Returns:\n",
+    "            int: Angle between the three given points\n",
+    "        \"\"\"\n",
     "        # Calculating the vectors ab and bc\n",
     "        ab = np.array([a[0] - b[0], a[1] - b[1]])\n",
     "        bc = np.array([c[0] - b[0], c[1] - b[1]])\n",
@@ -123,11 +190,46 @@
     "        angle = np.arccos(cosine_angle)\n",
     "        return np.degrees(angle)\n",
     "    \n",
-    "    def is_visible(self):\n",
-    "        return self.landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].visibility > 0.5\n",
+    "    def is_visible(self, landmark: mp_pose.PoseLandmark) -> bool:\n",
+    "        return self.landmarks[landmark.value].visibility > 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create curl counter class\n",
+    "class CurlCounter(Counter, CounterUtils):\n",
+    "    def __init__(self, min_angle=30, max_angle=160, resting_angle=180):\n",
+    "        \"\"\"\n",
+    "        Class for counting bicep curls.\n",
+    "        \n",
+    "        Args:\n",
+    "            min_angle (int): Minimum angle of the elbow\n",
+    "            max_angle (int): Maximum angle of the elbow\n",
+    "            resting_angle (int): Resting angle of the elbow\n",
     "\n",
-    "    def calc_angle(self):\n",
-    "        if self.is_visible():\n",
+    "        Attributes:\n",
+    "            min_angle (int): Minimum angle of the elbow\n",
+    "            max_angle (int): Maximum angle of the elbow\n",
+    "            resting_angle (int): Resting angle of the elbow\n",
+    "            current_angle (int): Current angle of the elbow\n",
+    "        \"\"\"\n",
+    "        super().__init__(state='down')\n",
+    "        self.min_angle = min_angle\n",
+    "        self.max_angle = max_angle\n",
+    "        self.resting_angle = resting_angle\n",
+    "        self.current_angle = resting_angle\n",
+    "\n",
+    "    def make_calculations(self):\n",
+    "        \"\"\"\n",
+    "        Calculates the angle of the elbow and updates the current angle.\n",
+    "        \"\"\"\n",
+    "        if self.is_visible(mp_pose.PoseLandmark.LEFT_SHOULDER) \\\n",
+    "        and self.is_visible(mp_pose.PoseLandmark.LEFT_ELBOW) \\\n",
+    "        and self.is_visible(mp_pose.PoseLandmark.LEFT_WRIST):\n",
     "            LEFT_SHOULDER = [self.landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER.value].x, self.landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER.value].y]\n",
     "            LEFT_ELBOW = [self.landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].x, self.landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].y]\n",
     "            LEFT_WRIST = [self.landmarks[mp_pose.PoseLandmark.LEFT_WRIST.value].x, self.landmarks[mp_pose.PoseLandmark.LEFT_WRIST.value].y]\n",
@@ -136,18 +238,44 @@
     "            self.current_angle = self.resting_angle\n",
     "\n",
     "    def count(self):\n",
+    "        \"\"\"\n",
+    "        Counts the number of bicep curls.\n",
+    "        \"\"\"\n",
     "        if self.current_angle > self.max_angle and self.state == 'up':\n",
-    "            self.counter += 1\n",
+    "            self.increment()\n",
     "            self.state = 'down'\n",
     "        if self.current_angle < self.min_angle and self.state == 'down':\n",
-    "            self.state = 'up'\n"
+    "            self.state = 'up'\n",
+    "\n",
+    "    def run(self, landmarks: List[mp_pose.PoseLandmark]) -> int:\n",
+    "        \"\"\"\n",
+    "        Runs the bicep curl counter.\n",
+    "\n",
+    "        Args:\n",
+    "            landmarks (List[mp_pose.PoseLandmark]): List of landmarks from the pose model\n",
+    "\n",
+    "        Returns:\n",
+    "            int: Number of bicep curls\n",
+    "        \"\"\"\n",
+    "        self.landmarks = landmarks\n",
+    "        self.make_calculations()\n",
+    "        self.count()\n",
+    "        return self.counter    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n"
+     ]
+    }
+   ],
    "source": [
     "# Setup MediaPipe instance\n",
     "with mp_pose.Pose(min_detection_confidence=0.5, min_tracking_confidence=0.5) as pose:\n",
@@ -183,12 +311,10 @@
     "            landmarks = results.pose_landmarks.landmark\n",
     "        \n",
     "            # curl counter\n",
-    "            curl_counter.landmarks = landmarks\n",
-    "            curl_counter.calc_angle()\n",
-    "            curl_counter.count()\n",
+    "            curl_counter.run(landmarks)\n",
     "\n",
     "            # Render curl counter\n",
-    "            cv2.putText(image, str(curl_counter.counter),\n",
+    "            cv2.putText(image, str(curl_counter),\n",
     "                        (10, 50), cv2.FONT_HERSHEY_SIMPLEX, 2, (255, 255, 255), 2, cv2.LINE_AA)\n",
     "            \n",
     "            # Render angle on left elbow\n",
@@ -214,6 +340,36 @@
     "    cap.release()\n",
     "    cv2.destroyAllWindows()\n",
     "exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3527813333.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[8], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    class WorkoutSession(excersises: List[Union[CurlCounter, ...]]):\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "# Based on the previous code, create a class for a workout session\n",
+    "class WorkoutSession(excersises: List[Union[CurlCounter, ...]]):\n",
+    "    \"\"\"\n",
+    "    Class for a workout session.\n",
+    "    \"\"\""
    ]
   }
  ],
