--- a/deep_learning/4. Curl reps counter.ipynb
+++ b/deep_learning/4. Curl reps counter.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,8 +115,9 @@
     "    \"\"\"\n",
     "    def __init__(self, state = None) -> None:\n",
     "        self.counter = 0\n",
-    "        self.state = state\n",
     "        self.landmarks = None\n",
+    "        self.state = state\n",
+    "        self.rep_state_percentage = 0.0\n",
     "\n",
     "    @abstractmethod\n",
     "    def make_calculations(self):\n",
@@ -132,12 +133,14 @@
     "        \"\"\"\n",
     "        ...\n",
     "\n",
-    "    @abstractmethod\n",
-    "    def run(self, landmarks):\n",
+    "    def run(self, landmarks: List[mp_pose.PoseLandmark]) -> None:\n",
     "        \"\"\"\n",
-    "        Takes care of running the counter logic.\n",
+    "        Args:\n",
+    "            landmarks (List[mp_pose.PoseLandmark]): List of landmarks from the pose model\n",
     "        \"\"\"\n",
-    "        ...\n",
+    "        self.landmarks = landmarks\n",
+    "        self.make_calculations()\n",
+    "        self.count()\n",
     "\n",
     "    def increment(self):\n",
     "        self.counter += 1\n",
@@ -149,12 +152,15 @@
     "        self.counter = 0\n",
     "\n",
     "    def __repr__(self):\n",
-    "        return str(f\"Counter: {str(self.counter)} State: {str(self.state)}\")"
+    "        if type(self.rep_state_percentage) == int:\n",
+    "            return str(f\"Counter: {str(self.counter)} State: {str(self.state)} Rep-State: {str(self.rep_state_percentage)}%\")\n",
+    "        else:\n",
+    "            return str(f\"Counter: {str(self.counter)} State: {str(self.state)} Rep-State: {str(self.rep_state_percentage)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,13 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create curl counter class\n",
     "class CurlCounter(Counter, CounterUtils):\n",
-    "    def __init__(self, min_angle=30, max_angle=160, resting_angle=180):\n",
+    "    def __init__(self, min_angle=30, max_angle=150):\n",
     "        \"\"\"\n",
     "        Class for counting bicep curls.\n",
     "        \n",
@@ -216,12 +222,18 @@
     "            max_angle (int): Maximum angle of the elbow\n",
     "            resting_angle (int): Resting angle of the elbow\n",
     "            current_angle (int): Current angle of the elbow\n",
+    "            LEFT_SHOULDER (list): Coordinates of the left shoulder\n",
+    "            LEFT_ELBOW (list): Coordinates of the left elbow\n",
+    "            LEFT_WRIST (list): Coordinates of the left wrist\n",
     "        \"\"\"\n",
     "        super().__init__(state='down')\n",
     "        self.min_angle = min_angle\n",
     "        self.max_angle = max_angle\n",
-    "        self.resting_angle = resting_angle\n",
-    "        self.current_angle = resting_angle\n",
+    "        self.resting_angle = max_angle\n",
+    "        self.current_angle = max_angle\n",
+    "        self.LEFT_SHOULDER = None\n",
+    "        self.LEFT_ELBOW = None\n",
+    "        self.LEFT_WRIST = None\n",
     "\n",
     "    def make_calculations(self):\n",
     "        \"\"\"\n",
@@ -230,10 +242,10 @@
     "        if self.is_visible(mp_pose.PoseLandmark.LEFT_SHOULDER) \\\n",
     "        and self.is_visible(mp_pose.PoseLandmark.LEFT_ELBOW) \\\n",
     "        and self.is_visible(mp_pose.PoseLandmark.LEFT_WRIST):\n",
-    "            LEFT_SHOULDER = [self.landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER.value].x, self.landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER.value].y]\n",
-    "            LEFT_ELBOW = [self.landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].x, self.landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].y]\n",
-    "            LEFT_WRIST = [self.landmarks[mp_pose.PoseLandmark.LEFT_WRIST.value].x, self.landmarks[mp_pose.PoseLandmark.LEFT_WRIST.value].y]\n",
-    "            self.current_angle = self.calculate_angle_3p(LEFT_SHOULDER, LEFT_ELBOW, LEFT_WRIST)\n",
+    "            self.LEFT_SHOULDER = [self.landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER.value].x, self.landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER.value].y]\n",
+    "            self.LEFT_ELBOW = [self.landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].x, self.landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].y]\n",
+    "            self.LEFT_WRIST = [self.landmarks[mp_pose.PoseLandmark.LEFT_WRIST.value].x, self.landmarks[mp_pose.PoseLandmark.LEFT_WRIST.value].y]\n",
+    "            self.current_angle = self.calculate_angle_3p(self.LEFT_SHOULDER, self.LEFT_ELBOW, self.LEFT_WRIST)\n",
     "        else:\n",
     "            self.current_angle = self.resting_angle\n",
     "\n",
@@ -246,130 +258,117 @@
     "            self.state = 'down'\n",
     "        if self.current_angle < self.min_angle and self.state == 'down':\n",
     "            self.state = 'up'\n",
+    "            self.rep_state_percentage = \"Come Down\"\n",
     "\n",
-    "    def run(self, landmarks: List[mp_pose.PoseLandmark]) -> int:\n",
+    "        if self.state == 'down':\n",
+    "            self.rep_state_percentage = round(round(1 - (self.current_angle - self.min_angle) / (self.max_angle - self.min_angle), 2) * 100)\n",
+    "            self.rep_state_percentage = max(self.rep_state_percentage, 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a video capture class, generalizing the code above\n",
+    "class PoseDetectorVideoCapture:\n",
+    "    \"\"\"\n",
+    "    Class for capturing video from a camera, detecting poses, and displaying the results.\n",
+    "\n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    cap : cv2.VideoCapture\n",
+    "        The video capture object.\n",
+    "    screen_width : int\n",
+    "        The width of the screen.\n",
+    "    screen_height : int\n",
+    "        The height of the screen.\n",
+    "    flip : bool\n",
+    "        Whether to flip the video feed horizontally.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, device: int = 0, flip: bool = False, show_landmarks: bool = True) -> None:\n",
     "        \"\"\"\n",
-    "        Runs the bicep curl counter.\n",
+    "        Args:\n",
+    "            device (int): The device index of the camera to use.\n",
+    "        \"\"\"\n",
+    "        self.cap = cv2.VideoCapture(device)\n",
+    "        self.screen_width = int(self.cap.get(3))\n",
+    "        self.screen_height = int(self.cap.get(4))\n",
+    "        self.flip = flip\n",
+    "        self.show_landmarks = show_landmarks\n",
+    "\n",
+    "    def __enter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __exit__(self, exc_type, exc_value, traceback):\n",
+    "        self.cap.release()\n",
+    "        cv2.destroyAllWindows()\n",
+    "        \n",
+    "    def run(self, pose_counter: Counter) -> None:\n",
+    "        \"\"\"\n",
+    "        Runs the pose detector video capture.\n",
     "\n",
     "        Args:\n",
-    "            landmarks (List[mp_pose.PoseLandmark]): List of landmarks from the pose model\n",
-    "\n",
-    "        Returns:\n",
-    "            int: Number of bicep curls\n",
+    "            pose_counter (Counter): The pose counter to use.\n",
     "        \"\"\"\n",
-    "        self.landmarks = landmarks\n",
-    "        self.make_calculations()\n",
-    "        self.count()\n",
-    "        return self.counter    \n"
+    "        with mp_pose.Pose(min_detection_confidence=0.5, min_tracking_confidence=0.5) as pose:\n",
+    "            while self.cap.isOpened():\n",
+    "                _, image = self.cap.read()\n",
+    "\n",
+    "                # Flip image horizontally\n",
+    "                if self.flip:\n",
+    "                    image = cv2.flip(image, 1)\n",
+    "\n",
+    "                # Recolor feed\n",
+    "                image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "                image.flags.writeable = False\n",
+    "\n",
+    "                # Make detection\n",
+    "                results = pose.process(image)\n",
+    "\n",
+    "                # Recolor image back to BGR\n",
+    "                image.flags.writeable = True\n",
+    "                image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
+    "\n",
+    "                # Extract landmarks\n",
+    "                with contextlib.suppress(Exception):\n",
+    "                    landmarks = results.pose_landmarks.landmark\n",
+    "                    \n",
+    "                    # Run pose counter\n",
+    "                    pose_counter.run(landmarks)\n",
+    "\n",
+    "                    # Render pose counter\n",
+    "                    cv2.putText(image, repr(pose_counter), \n",
+    "                        (10, 50), cv2.FONT_HERSHEY_SIMPLEX, 1, \n",
+    "                        (255, 255, 255), 2, cv2.LINE_AA)\n",
+    "\n",
+    "                # Render detections\n",
+    "                if self.show_landmarks:\n",
+    "                    mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_pose.POSE_CONNECTIONS,\n",
+    "                                            mp_drawing.DrawingSpec(color=(245, 117, 66), thickness=2, circle_radius=2),\n",
+    "                                            mp_drawing.DrawingSpec(color=(245, 66, 230), thickness=2, circle_radius=2),\n",
+    "                    )\n",
+    "\n",
+    "                # Show detections\n",
+    "                cv2.imshow('Detection Feed', image)\n",
+    "                if cv2.waitKey(10) & 0xFF == ord('q'):\n",
+    "                    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Setup MediaPipe instance\n",
-    "with mp_pose.Pose(min_detection_confidence=0.5, min_tracking_confidence=0.5) as pose:\n",
-    "    # Read feed\n",
-    "    cap = cv2.VideoCapture(0)\n",
-    "\n",
-    "    # Get screen dimensions\n",
-    "    screen_width = int(cap.get(3))\n",
-    "    screen_height = int(cap.get(4))\n",
-    "\n",
-    "    # Create curl counter instance\n",
+    "# Create instance of PoseDetectorVideoCapture\n",
+    "with PoseDetectorVideoCapture(flip=True) as video_capture:\n",
+    "    # Create instance of CurlCounter\n",
     "    curl_counter = CurlCounter()\n",
     "\n",
-    "    while cap.isOpened():\n",
-    "        _, image = cap.read()\n",
-    "\n",
-    "        # Flip image horizontally\n",
-    "        image = cv2.flip(image, 1)\n",
-    "\n",
-    "        # Recolor feed\n",
-    "        image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-    "        image.flags.writeable = False\n",
-    "\n",
-    "        # Make detection\n",
-    "        results = pose.process(image)\n",
-    "\n",
-    "        # Recolor image back to BGR\n",
-    "        image.flags.writeable = True\n",
-    "        image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
-    "\n",
-    "        # Extract landmarks\n",
-    "        with contextlib.suppress(Exception):\n",
-    "            landmarks = results.pose_landmarks.landmark\n",
-    "        \n",
-    "            # curl counter\n",
-    "            curl_counter.run(landmarks)\n",
-    "\n",
-    "            # Render curl counter\n",
-    "            cv2.putText(image, str(curl_counter),\n",
-    "                        (10, 50), cv2.FONT_HERSHEY_SIMPLEX, 2, (255, 255, 255), 2, cv2.LINE_AA)\n",
-    "            \n",
-    "            # Render angle on left elbow\n",
-    "            if curl_counter.is_visible():\n",
-    "                cv2.putText(image, str(int(curl_counter.current_angle)),\n",
-    "                            tuple(np.multiply(\n",
-    "                                (landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].x,\n",
-    "                                landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].y),\n",
-    "                                [screen_width, screen_height]).astype(int)),\n",
-    "                            cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 255), 2, cv2.LINE_AA)\n",
-    "\n",
-    "        # Render detections\n",
-    "        mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_pose.POSE_CONNECTIONS,\n",
-    "                                mp_drawing.DrawingSpec(color=(245, 117, 66), thickness=2, circle_radius=2),\n",
-    "                                mp_drawing.DrawingSpec(color=(245, 66, 230), thickness=2, circle_radius=2),\n",
-    "        )\n",
-    "\n",
-    "        # Show detections\n",
-    "        cv2.imshow('Detection Feed', image)\n",
-    "        if cv2.waitKey(10) & 0xFF == ord('q'):\n",
-    "            break\n",
-    "\n",
-    "    cap.release()\n",
-    "    cv2.destroyAllWindows()\n",
-    "exit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3527813333.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[8], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    class WorkoutSession(excersises: List[Union[CurlCounter, ...]]):\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "# Based on the previous code, create a class for a workout session\n",
-    "class WorkoutSession(excersises: List[Union[CurlCounter, ...]]):\n",
-    "    \"\"\"\n",
-    "    Class for a workout session.\n",
-    "    \"\"\""
+    "    # Run video capture\n",
+    "    video_capture.run(curl_counter)"
    ]
   }
  ],
