--- a/deep_learning/4. Curl reps counter.ipynb
+++ b/deep_learning/4. Curl reps counter.ipynb
@@ -113,11 +113,11 @@
     "    landmarks : list\n",
     "        The landmarks of the body.\n",
     "    \"\"\"\n",
-    "    def __init__(self, state = None) -> None:\n",
+    "    def __init__(self, state = None, output = None):\n",
     "        self.counter = 0\n",
     "        self.landmarks = None\n",
     "        self.state = state\n",
-    "        self.rep_state_percentage = 0.0\n",
+    "        self.output = output\n",
     "\n",
     "    @abstractmethod\n",
     "    def make_calculations(self):\n",
@@ -152,10 +152,10 @@
     "        self.counter = 0\n",
     "\n",
     "    def __repr__(self):\n",
-    "        if type(self.rep_state_percentage) == int:\n",
-    "            return str(f\"Counter: {str(self.counter)} State: {str(self.state)} Rep-State: {str(self.rep_state_percentage)}%\")\n",
+    "        if self.output:\n",
+    "            return str(self.output)\n",
     "        else:\n",
-    "            return str(f\"Counter: {str(self.counter)} State: {str(self.state)} Rep-State: {str(self.rep_state_percentage)}\")"
+    "            return str(f\"Counter: {str(self.counter)} State: {str(self.state)}\")"
    ]
   },
   {
@@ -226,7 +226,7 @@
     "            LEFT_ELBOW (list): Coordinates of the left elbow\n",
     "            LEFT_WRIST (list): Coordinates of the left wrist\n",
     "        \"\"\"\n",
-    "        super().__init__(state='down')\n",
+    "        super().__init__(state='down', output=\"Get in position to start reps\")\n",
     "        self.min_angle = min_angle\n",
     "        self.max_angle = max_angle\n",
     "        self.resting_angle = max_angle\n",
@@ -258,11 +258,10 @@
     "            self.state = 'down'\n",
     "        if self.current_angle < self.min_angle and self.state == 'down':\n",
     "            self.state = 'up'\n",
-    "            self.rep_state_percentage = \"Come Down\"\n",
-    "\n",
+    "            self.output = f\"Completed reps: {self.counter} Slowly return to starting position\"\n",
     "        if self.state == 'down':\n",
-    "            self.rep_state_percentage = round(round(1 - (self.current_angle - self.min_angle) / (self.max_angle - self.min_angle), 2) * 100)\n",
-    "            self.rep_state_percentage = max(self.rep_state_percentage, 0)\n"
+    "            percentage = round(round(1 - (self.current_angle - self.min_angle) / (self.max_angle - self.min_angle), 2) * 100)\n",
+    "            self.output = f\"Completed reps: {self.counter} -> {max(percentage, 0)}% to complete next rep\"\n"
    ]
   },
   {
