Improve DL project 4 output

--- a/deep_learning/4. Curl reps counter.ipynb
+++ b/deep_learning/4. Curl reps counter.ipynb
@@ -169,8 +169,7 @@
     "    \"\"\"\n",
     "    Class with utility functions for counting reps and sets in a workout.\n",
     "    \"\"\"\n",
-    "    @staticmethod\n",
-    "    def calculate_angle_3p(a: Tuple[float, float], b: Tuple[float, float], c: Tuple[float, float]) -> int:\n",
+    "    def calculate_angle_3p(self, a: Tuple[float, float], b: Tuple[float, float], c: Tuple[float, float]) -> int:\n",
     "        \"\"\"\n",
     "        Calculates the angle between three given points.\n",
     "\n",
@@ -197,7 +196,78 @@
     "        return np.degrees(angle)\n",
     "    \n",
     "    def is_visible(self, landmark: mp_pose.PoseLandmark) -> bool:\n",
-    "        return self.landmarks[landmark.value].visibility > 0.5"
+    "        \"\"\"\n",
+    "        Checks if a landmark is visible.\n",
+    "        \"\"\"\n",
+    "        return self.landmarks[landmark.value].visibility > 0.5\n",
+    "\n",
+    "\n",
+    "class VideoCaptureUtils:\n",
+    "    \"\"\"\n",
+    "    Class with utility functions for capturing video.\n",
+    "    \"\"\"\n",
+    "    def get_screen_text_position(self, text: str, font: int, font_scale: float, font_thickness: int, img_size: Tuple[int, int]) -> Tuple[int, int]:\n",
+    "        \"\"\"\n",
+    "        Calculates the position of the text on the screen.\n",
+    "\n",
+    "        Args:\n",
+    "            text (str): Text to draw on the image.\n",
+    "            font (int): Font to use.\n",
+    "            font_scale (float): Font scale to use.\n",
+    "            font_thickness (int): Font thickness to use.\n",
+    "            img_size (Tuple[int, int]): Size of the image.\n",
+    "\n",
+    "        Returns:\n",
+    "            Tuple[int, int]: Position of the text on the screen.\n",
+    "        \"\"\"\n",
+    "        # Calculate text size and position\n",
+    "        text_size = cv2.getTextSize(text, font, font_scale, font_thickness)[0]\n",
+    "        text_x = (img_size[0]) - (text_size[0] // 2) - 50 # 50 is a magic number to center the text\n",
+    "        text_y = (img_size[1] // 2) + (text_size[1] // 2)\n",
+    "        return (text_x, text_y)\n",
+    "\n",
+    "    def draw_text_on_image(self, text: str, image: np.ndarray, bottom: bool = True, font_scale: float = 1) -> None:\n",
+    "        \"\"\"\n",
+    "        Draws text with a black border on an image.\n",
+    "\n",
+    "        Args:\n",
+    "            text (str): Text to draw on the image.\n",
+    "            image (np.ndarray): Image to draw on.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # Set parameters for the text\n",
+    "        font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "        font_scale = font_scale\n",
+    "        font_thickness = font_scale * 2\n",
+    "        border_thickness = font_thickness + 2\n",
+    "\n",
+    "        # Calculate text size and position\n",
+    "        text_size = cv2.getTextSize(text, font, font_scale, font_thickness)[0]\n",
+    "        position = self.get_screen_text_position(text, font, font_scale, font_thickness, image.shape)\n",
+    "\n",
+    "        if not bottom:\n",
+    "            position = (position[0], text_size[1] + 50)\n",
+    "\n",
+    "        # Draw black border by offsetting text\n",
+    "        for x_offset in [-1, 1]:\n",
+    "            for y_offset in [-1, 1]:\n",
+    "                border_position = (position[0] + x_offset, position[1] + y_offset)\n",
+    "                cv2.putText(image, text, border_position, font, font_scale, (0, 0, 0), border_thickness, cv2.LINE_AA)\n",
+    "\n",
+    "        # Draw the main text\n",
+    "        cv2.putText(image, text, position, font, font_scale, (255, 255, 255), font_thickness, cv2.LINE_AA)\n",
+    "\n",
+    "    def draw_counter_on_image(self, counter: Counter, image: np.ndarray) -> None:\n",
+    "        \"\"\"\n",
+    "        Draws the counter on an image.\n",
+    "\n",
+    "        Args:\n",
+    "            counter (Counter): Counter to draw.\n",
+    "            image (np.ndarray): Image to draw on.\n",
+    "        \"\"\"\n",
+    "        self.draw_text_on_image(str(counter), image, bottom=False, font_scale=3)\n",
+    "\n",
+    "        "
    ]
   },
   {
@@ -226,7 +296,7 @@
     "            LEFT_ELBOW (list): Coordinates of the left elbow\n",
     "            LEFT_WRIST (list): Coordinates of the left wrist\n",
     "        \"\"\"\n",
-    "        super().__init__(state='down', output=\"Get in position to start reps\")\n",
+    "        super().__init__(state='down')\n",
     "        self.min_angle = min_angle\n",
     "        self.max_angle = max_angle\n",
     "        self.resting_angle = max_angle\n",
@@ -258,10 +328,10 @@
     "            self.state = 'down'\n",
     "        if self.current_angle < self.min_angle and self.state == 'down':\n",
     "            self.state = 'up'\n",
-    "            self.output = f\"Completed reps: {self.counter} Slowly return to starting position\"\n",
+    "            self.output = {\"counter\": self.counter, \"message\": \"Slowly return to starting position\"}\n",
     "        if self.state == 'down':\n",
     "            percentage = round(round(1 - (self.current_angle - self.min_angle) / (self.max_angle - self.min_angle), 2) * 100)\n",
-    "            self.output = f\"Completed reps: {self.counter} -> {max(percentage, 0)}% to complete next rep\"\n"
+    "            self.output = {\"counter\": self.counter, \"message\": f\"{max(percentage, 0)}% to complete next rep\"}\n"
    ]
   },
   {
@@ -271,7 +341,7 @@
    "outputs": [],
    "source": [
     "# Create a video capture class, generalizing the code above\n",
-    "class PoseDetectorVideoCapture:\n",
+    "class PoseDetectorVideoCapture(VideoCaptureUtils):\n",
     "    \"\"\"\n",
     "    Class for capturing video from a camera, detecting poses, and displaying the results.\n",
     "\n",
@@ -338,9 +408,8 @@
     "                    pose_counter.run(landmarks)\n",
     "\n",
     "                    # Render pose counter\n",
-    "                    cv2.putText(image, repr(pose_counter), \n",
-    "                        (10, 50), cv2.FONT_HERSHEY_SIMPLEX, 1, \n",
-    "                        (255, 255, 255), 2, cv2.LINE_AA)\n",
+    "                    self.draw_counter_on_image(pose_counter.output[\"counter\"], image)\n",
+    "                    self.draw_text_on_image(pose_counter.output[\"message\"], image)\n",
     "\n",
     "                # Render detections\n",
     "                if self.show_landmarks:\n",
@@ -361,7 +430,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create instance of PoseDetectorVideoCapture\n",
+    "# Start PoseDetectorVideoCapture\n",
     "with PoseDetectorVideoCapture(flip=True) as video_capture:\n",
     "    # Create instance of CurlCounter\n",
     "    curl_counter = CurlCounter()\n",
