--- a/deep_learning/computer_vision/7. Object Detection Fundamentals.ipynb
+++ b/deep_learning/computer_vision/7. Object Detection Fundamentals.ipynb
@@ -1352,7 +1352,7 @@
       "source": [
         "# Train the model\n",
         "model = RCNN().to(device)\n",
-        "critertion = model.calc_loss\n",
+        "criterion = model.calc_loss\n",
         "optimizer = optim.SGD(model.parameters(), lr=1e-3)\n",
         "train_dl, val_dl = load_data()\n",
         "n_epochs = 5\n",
@@ -1361,7 +1361,7 @@
         "for epoch in range(n_epochs):\n",
         "    n = len(train_dl)\n",
         "    for i, data in enumerate(train_dl):\n",
-        "        loss, detection_loss, regression_loss, accs = train_batch(model, data, critertion, optimizer)\n",
+        "        loss, detection_loss, regression_loss, accs = train_batch(model, data, criterion, optimizer)\n",
         "        log.record(\n",
         "            epoch+(i+1)/n,\n",
         "            train_loss=loss.item(),\n",
@@ -1371,7 +1371,7 @@
         "            end='\\r')\n",
         "    n = len(val_dl)\n",
         "    for i, data in enumerate(val_dl):\n",
-        "        p_labels, p_deltas, loss, detection_loss, regression_loss, accs = validate_batch(model, data, critertion)\n",
+        "        p_labels, p_deltas, loss, detection_loss, regression_loss, accs = validate_batch(model, data, criterion)\n",
         "        log.record(\n",
         "            epoch+(i+1)/n,\n",
         "            val_loss=loss.item(),\n",
