--- a/deep_learning/computer_vision/6.1 Road Sign detection.ipynb
+++ b/deep_learning/computer_vision/6.1 Road Sign detection.ipynb
@@ -474,7 +474,7 @@
     "# Train the model\n",
     "model = SignClassifier().to(device)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
-    "critertion = model.compute_metrics\n",
+    "criterion = model.compute_metrics\n",
     "train_dl, val_dl = load_data(batch_size=32)\n",
     "n_epochs = 50\n",
     "log = Report(n_epochs)\n",
@@ -482,11 +482,11 @@
     "for epoch in range(n_epochs):\n",
     "    n = len(train_dl)\n",
     "    for i, data in enumerate(train_dl):\n",
-    "        loss, acc = train_batch(model, data, optimizer, critertion)\n",
+    "        loss, acc = train_batch(model, data, optimizer, criterion)\n",
     "        log.record(epoch+(i+1)/n, train_loss=loss, train_acc=acc, end='\\r')\n",
     "    n = len(val_dl)\n",
     "    for i, data in enumerate(val_dl):\n",
-    "        loss, acc = validate_batch(model, data, critertion)\n",
+    "        loss, acc = validate_batch(model, data, criterion)\n",
     "        log.record(epoch+(i+1)/n, val_loss=loss, val_acc=acc, end='\\r')\n",
     "    log.report_avgs(epoch+1)\n",
     "    if epoch == 10: optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
